--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
