--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "date-fns": "^2.21.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
