--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "date-fns": "^2.21.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "date-fns": "^2.21.0"
+    "react-hook-form": "^7.51.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
