--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "date-fns": "^2.21.0",
+    "framer-motion": "^11.0.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
